[gd_scene load_steps=7 format=2]

[ext_resource path="res://image/tex_fonta.tres" type="DynamicFontData" id=1]
[ext_resource path="res://LevelupWindow.gd" type="Script" id=2]
[ext_resource path="res://image/item_back2.png" type="Texture" id=3]
[ext_resource path="res://image/Gugi-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 17
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[node name="LevelupWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -144.0
margin_right = 104.0
margin_bottom = 88.0
rect_min_size = Vector2( 200, 220 )
color = Color( 0.145098, 0.109804, 0.109804, 1 )

[node name="df" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 4.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 50 )
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="ColorRect/df"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -33.0
margin_right = 79.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.25098, 0.305882, 0.768627, 1 )
custom_fonts/font = SubResource( 3 )
text = "LEVEL UP!
MAX HP 3 UP!
Combo Bonus 3 UP!"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -280.0
margin_right = 512.0
margin_bottom = 296.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 452.0
margin_top = 227.0
margin_right = 572.0
margin_bottom = 349.0
rect_min_size = Vector2( 120, 15 )
custom_constants/separation = 16
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 20 )
custom_fonts/font = SubResource( 1 )
text = "MAX HP 5 UP"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 120.0
margin_bottom = 76.0

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 20 )
custom_fonts/font = SubResource( 1 )
text = "STR 1 UP"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 120.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 15 )

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 20 )
custom_fonts/font = SubResource( 1 )
text = "DEF 1 UP"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/Button" to="." method="_on_maxhp_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/Button2" to="." method="_on_str_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/Button3" to="." method="_on_def_pressed"]
